--- a/src/app/index.html
+++ b/src/app/index.html
@@ -81,7 +81,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <h4>Basics of Pandas</h4>
         <hr class="w3-clear">
         <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>
-        <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="/basics">Let's Learn and Practice</a>
+        <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="basics/">Let's Learn and Practice</a>
 
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
       </div>
@@ -101,7 +101,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <h4>Cleaning the data using Pandas</h4>
         <hr class="w3-clear">
         <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>
-        <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="/cleaning">Let's Learn and Practice</a>
+        <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="cleaning/">Let's Learn and Practice</a>
 
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
       </div>
