Added Link in main page

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -91,7 +91,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <h4>Understanding the data</h4>
         <hr class="w3-clear">
         <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>
-                <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom learn">Let's Learn and Practice</button>
+        <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="Prod/understanding/">Let's Learn and Practice</a>
 
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
       </div>
