Updated Landing Page

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -103,10 +103,6 @@
             <img class="share-btn" src="https://www.dignitydreams.com/wp-content/uploads/2017/08/twitter-icon-basic-round-social-iconset-s-icons-0.png" alt="Share on Twitter" onclick="javascript:window.open('https://twitter.com/share?text=Excel Killer is here to rescue you from the hassle of using Excel because there is a much better way to thrive using Pandas&amp;url=https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/','Twitter-dialog','width=626,height=436'); return false;"/>
 <!--            <img class="share-btn" src="https://carlisletheacarlisletheatre.org/images/linkedin-logo-png-circle-2.jpg" alt="Share on Linkedin" onclick="javascript:window.open('https://www.linkedin.com/sharing/share-offsite/?url=https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/'); return false;"/>-->
         </div>
-        <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
-            <p class="share-content">We would love to listen from you? Have any query, feeback, new topic in mind, anything...email us.  </p>
-            <img class="share-btn" style="margin-right: 10px" src="https://www.socialtalent.com/wp-content/uploads/2015/07/Gmail-Logo.png" alt="Email us"><a href="mailto:singh.anshu0612@gmail.com"></a></img>
-        </div>
       </div>
 
       <!-- Middle Column -->
@@ -154,6 +150,12 @@
         <!-- End Middle Column -->
       </div>
       <!-- End Grid -->
+      <div class="w3-col m2" style="margin-top:16px">
+        <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
+            <p class="share-content">We would love to listen from you? Have any query, feedback, new topic in mind ...email us.  </p>
+          <a href="mailto:singh.anshu0612@gmail.com"><img class="share-btn" style="margin-right: 10px" src="https://www.socialtalent.com/wp-content/uploads/2015/07/Gmail-Logo.png" alt="Email us"/></a>
+        </div>
+      </div>
     </div>
     <!-- End Page Container -->
   </div>
