--- a/src/app/index.html
+++ b/src/app/index.html
@@ -109,42 +109,39 @@
       <div class="w3-col m7">
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">100/20000 successfully solved</span>
+          <span class="w3-right w3-opacity">72/79 successfully solved</span>
           <h4>Basics of Pandas</h4>
           <hr class="w3-clear">
           <p>Learn how to read and group data, add and select columns or rows using Pandas.</p>
-          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="basics/">Let's Learn and Practice</a>
-          <a type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</a>
+          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/basics/">Let's Learn and Practice</a>
+          <a type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 22 Likes</a>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">100/20000 successfully solved</span>
+          <span class="w3-right w3-opacity">73/80 successfully solved</span>
           <h4>Understanding the data</h4>
           <hr class="w3-clear">
           <p>Learn how to preview and get insights into data and apply statistics using Pandas.</p>
-          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="understanding/">Let's Learn and Practice</a>
-
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
+          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/understanding/">Let's Learn and Practice</a>
+          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 30 Likes</button>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">100/20000 successfully solved</span>
+          <span class="w3-right w3-opacity">88/100 successfully solved</span>
           <h4>Cleaning the data using Pandas</h4>
           <hr class="w3-clear">
           <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>
-          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="cleaning/">Let's Learn and Practice</a>
-
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
+          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/cleaning/">Let's Learn and Practice</a>
+          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 20 Likes</button>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">100/20000 successfully solved</span>
+          <span class="w3-right w3-opacity">10/40 successfully solved</span>
           <h4>Visualizing the data</h4>
           <hr class="w3-clear">
           <p>Learn how to create and get insights into graphs using Matplotlib. Further, you get to learn subplotting and data-to-ink ratio.</p>
-          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="visualize/">Let's Learn and Practice</a>
-
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 500 Likes</button>
+          <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/visualize/">Let's Learn and Practice</a>
+          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 10 Likes</button>
         </div>
 
         <!-- End Middle Column -->
@@ -152,7 +149,7 @@
       <!-- End Grid -->
       <div class="w3-col m2" style="margin-top:16px">
         <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
-            <p class="share-content">We would love to listen from you? Have any query, feedback, new topic in mind ...email us.  </p>
+          <p class="share-content">We would love to listen from you. Have any query, feedback, new topic in mind ...email us.  </p>
           <a href="mailto:singh.anshu0612@gmail.com"><img class="share-btn" style="margin-right: 10px" src="https://www.socialtalent.com/wp-content/uploads/2015/07/Gmail-Logo.png" alt="Email us"/></a>
         </div>
       </div>
