Added Dynamo DB

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -109,41 +109,53 @@
       <div class="w3-col m7">
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">72/79 successfully solved</span>
+<!--          <span class="w3-right w3-opacity">72/79 successfully solved</span>-->
           <h4>Basics of Pandas</h4>
           <hr class="w3-clear">
-          <p>Learn how to read and group data, add and select columns or rows using Pandas.</p>
+          <p>1. Reading data using Pandas  <span class="w3-right w3-opacity">{{activity_counts.basics[1].correct}}/{{activity_counts.basics[1].correct+activity_counts.basics[1].incorrect}} successfully solved</span></p>
+          <p>2. Selecting columns and rows using Pandas <span class="w3-right w3-opacity">{{activity_counts.basics[2].correct}}/{{activity_counts.basics[2].correct+activity_counts.basics[2].incorrect}} successfully solved</span></p>
+          <p>3. Adding new columns and rows using Pandas <span class="w3-right w3-opacity">{{activity_counts.basics[3].correct}}/{{activity_counts.basics[3].correct+activity_counts.basics[3].incorrect}} successfully solved</span></p>
+          <p>4. Basic grouping of data using Pandas <span class="w3-right w3-opacity">{{activity_counts.basics[4].correct}}/{{activity_counts.basics[4].correct+activity_counts.basics[4].incorrect}} successfully solved</span></p>
           <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/basics/">Let's Learn and Practice</a>
           <a type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 22 Likes</a>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">73/80 successfully solved</span>
+<!--          <span class="w3-right w3-opacity">73/80 successfully solved</span>-->
           <h4>Understanding the data</h4>
           <hr class="w3-clear">
-          <p>Learn how to preview and get insights into data and apply statistics using Pandas.</p>
+          <p>1. Previewing data using Pandas <span class="w3-right w3-opacity">{{activity_counts.understanding[1].correct}}/{{activity_counts.understanding[1].correct+activity_counts.understanding[1].incorrect}} successfully solved</span></p>
+          <p>2. Finding missing and unique values using Pandas  <span class="w3-right w3-opacity">{{activity_counts.understanding[2].correct}}/{{activity_counts.understanding[2].correct+activity_counts.understanding[2].incorrect}} successfully solved</span></p>
+          <p>3. Counting values using Pandas  <span class="w3-right w3-opacity">{{activity_counts.understanding[3].correct}}/{{activity_counts.understanding[3].correct+activity_counts.understanding[3].incorrect}} successfully solved</span></p>
+          <p>4. Applying basic statistics using Pandas  <span class="w3-right w3-opacity">{{activity_counts.understanding[4].correct}}/{{activity_counts.understanding[4].correct+activity_counts.understanding[4].incorrect}} successfully solved</span></p>
+<!--          <p>Learn how to preview and get insights into data and apply statistics using Pandas.</p>-->
           <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/understanding/">Let's Learn and Practice</a>
           <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 30 Likes</button>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">88/100 successfully solved</span>
+<!--          <span class="w3-right w3-opacity">88/100 successfully solved</span>-->
           <h4>Cleaning the data using Pandas</h4>
           <hr class="w3-clear">
-          <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>
+          <p>1. Handling unwanted values <span class="w3-right w3-opacity">{{activity_counts.cleaning[1].correct}}/{{activity_counts.cleaning[1].correct+activity_counts.cleaning[1].incorrect}} successfully solved</span></p>
+          <p>2. Creating subsets of dataframes  <span class="w3-right w3-opacity">{{activity_counts.cleaning[2].correct}}/{{activity_counts.cleaning[2].correct+activity_counts.cleaning[2].incorrect}} successfully solved</span></p>
+          <p>3. Applying simple functions to dataframes <span class="w3-right w3-opacity">{{activity_counts.cleaning[3].correct}}/{{activity_counts.cleaning[3].correct+activity_counts.cleaning[2].incorrect}} successfully solved</span></p>
+<!--          <p>Learn how to handle unwanted values, create subsets of dataframes, apply basic functions to dataframes using Pandas.</p>-->
           <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/cleaning/">Let's Learn and Practice</a>
           <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 20 Likes</button>
         </div>
 
         <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-          <span class="w3-right w3-opacity">10/40 successfully solved</span>
+<!--          <span class="w3-right w3-opacity">10/40 successfully solved</span>-->
           <h4>Visualizing the data</h4>
           <hr class="w3-clear">
-          <p>Learn how to create and get insights into graphs using Matplotlib. Further, you get to learn subplotting and data-to-ink ratio.</p>
+<!--          <p>Learn how to create and get insights into graphs using Matplotlib. Further, you get to learn subplotting and data-to-ink ratio.</p>-->
+          <p>1. Creating graphs using Matplotlib <span class="w3-right w3-opacity">{{activity_counts.visualize[1].correct}}/{{activity_counts.visualize[1].correct+activity_counts.visualize[1].incorrect}} successfully solved</span></p>
+          <p>2. Helping viewer understanding the graph  <span class="w3-right w3-opacity">{{activity_counts.visualize[2].correct}}/{{activity_counts.visualize[2].correct+activity_counts.visualize[2].incorrect}} successfully solved</span></p>
+          <p>3. Subplotting and data-to-ink ratio <span class="w3-right w3-opacity">{{activity_counts.visualize[3].correct}}/{{activity_counts.visualize[3].correct+activity_counts.visualize[3].incorrect}} successfully solved</span></p>
           <a target="_blank" class="w3-button w3-theme-d1 w3-margin-bottom learn" href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/visualize/">Let's Learn and Practice</a>
           <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom like"><i class="fa fa-thumbs-up"></i> 10 Likes</button>
         </div>
-
         <!-- End Middle Column -->
       </div>
       <!-- End Grid -->
@@ -151,6 +163,10 @@
         <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
           <p class="share-content">We would love to listen from you. Have any query, feedback, new topic in mind ...email us.  </p>
           <a href="mailto:singh.anshu0612@gmail.com"><img class="share-btn" style="margin-right: 10px" src="https://www.socialtalent.com/wp-content/uploads/2015/07/Gmail-Logo.png" alt="Email us"/></a>
+        </div>
+
+        <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
+          <p class="share-content">For the full experience, check Excel-killer through Achievements platform <a href="https://achievements-prod.firebaseapp.com/#/paths/-LqGWvEA3N_Q5VC7Qped" style="color:blue">here</a>. In achievements you can track your progress, as well as get your hands in extra content on how to understand python, tips & tricks of pandas and where to continue learning  </p>
         </div>
       </div>
     </div>
