Added New Logo and CSS Fixes

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -46,6 +46,11 @@
     font-family: "Open Sans", sans-serif
   }
 
+  .logo {
+    height: 50px;
+    padding: 8px;
+  }
+
   .w3-theme-d2 {
     background-color: #506987 !important;
   }
@@ -80,7 +85,8 @@
   <div class="w3-top fb-custom-share">
     <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4">Excel Killer</a>
+<!--      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4">Excel Killer</a>-->
+      <img class="logo" src="https://excel-killer-images.s3.amazonaws.com/logo.png" />
     </div>
   </div>
   <!-- Page Container -->
